--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ html {
 }
 
 .itens-cardapio .info .pedir:hover {
-    background-color: #5e5252;
+    background-color: #37c44a;
     color: rgb(255, 255, 255);
 }
 
